big-barda: independent branch roots, cross-category costs, WASD controls, recency scoreboard, 50-start/10k-total rebalance