@@ -1,14 +1,20 @@
 package com.zenbukkowa.domain;
 
 import java.util.Collections;
-import java.util.List;
+import java.util.HashMap;
 import java.util.Map;
 
 public enum SkillType {
     AREA_RADIUS(PointCategory.TERRA, 5, new int[]{1, 3, 5, 7, 9}),
     AREA_DEPTH(PointCategory.TERRA, 5, new int[]{1, 3, 5, 7, 9}),
     PILLAR_BREAK(PointCategory.TERRA, 3, new int[]{1, 2, 3}),
-    EFFICIENCY(PointCategory.TERRA, 5, new int[]{1, 2, 3, 4, 5}),
+    EFFICIENCY(PointCategory.TERRA, 5, new int[]{1, 2, 3, 4, 5}) {
+        @Override
+        public Map<PointCategory, Integer> tierCost(int t) {
+            int c = cost(t);
+            return Map.of(PointCategory.TERRA, c, PointCategory.MINERAL, c);
+        }
+    },
     GRAVITY_WELL(PointCategory.TERRA, 1, new int[]{1}),
     TERRA_BLESSING(PointCategory.TERRA, 3, new int[]{1, 2, 3}),
     HASTE_AURA(PointCategory.MINERAL, 5, new int[]{1, 2, 3, 4, 5}),
@@ -20,63 +26,96 @@ public enum SkillType {
     LEAF_CONSUME(PointCategory.ORGANIC, 1, new int[]{1}),
     ROOT_RAZE(PointCategory.ORGANIC, 1, new int[]{1}),
     SAPLING_REPLANT(PointCategory.ORGANIC, 1, new int[]{1}),
-    BONEMEAL_AURA(PointCategory.ORGANIC, 3, new int[]{1, 2, 3}),
+    BONEMEAL_AURA(PointCategory.ORGANIC, 3, new int[]{1, 2, 3}) {
+        @Override
+        public Map<PointCategory, Integer> tierCost(int t) {
+            int c = cost(t);
+            return Map.of(PointCategory.ORGANIC, c, PointCategory.CROP, c);
+        }
+    },
     NATURE_TOUCH(PointCategory.ORGANIC, 3, new int[]{1, 2, 3}),
     WILD_GROWTH(PointCategory.ORGANIC, 3, new int[]{1, 2, 3}),
     SALVAGE(PointCategory.AQUATIC, 3, new int[]{1, 2, 3}),
-    TIDE_BREAKER(PointCategory.AQUATIC, 1, new int[]{1}),
+    TIDE_BREAKER(PointCategory.AQUATIC, 1, new int[]{1}) {
+        @Override
+        public Map<PointCategory, Integer> tierCost(int t) {
+            int c = cost(t);
+            return Map.of(PointCategory.AQUATIC, c, PointCategory.TERRA, c);
+        }
+    },
     FROST_WALKER(PointCategory.AQUATIC, 1, new int[]{1}),
     CONDUIT_AURA(PointCategory.AQUATIC, 3, new int[]{1, 2, 3}),
-    DEEP_DIVE(PointCategory.AQUATIC, 3, new int[]{1, 2, 3}),
+    DEEP_DIVE(PointCategory.AQUATIC, 3, new int[]{1, 2, 3}) {
+        @Override
+        public Map<PointCategory, Integer> tierCost(int t) {
+            int c = cost(t);
+            return Map.of(PointCategory.AQUATIC, c, PointCategory.VOID, c);
+        }
+    },
     TSUNAMI(PointCategory.AQUATIC, 3, new int[]{1, 2, 3}),
     VOID_SIPHON(PointCategory.VOID, 3, new int[]{1, 2, 3}),
     STRUCTURE_SENSE(PointCategory.VOID, 1, new int[]{1}),
     NIGHT_VISION(PointCategory.VOID, 1, new int[]{1}),
     FIRE_RESISTANCE(PointCategory.VOID, 1, new int[]{1}),
-    VOID_WALK(PointCategory.VOID, 3, new int[]{1, 2, 3}),
+    VOID_WALK(PointCategory.VOID, 3, new int[]{1, 2, 3}) {
+        @Override
+        public Map<PointCategory, Integer> tierCost(int t) {
+            int c = cost(t);
+            return Map.of(PointCategory.VOID, c, PointCategory.TERRA, c);
+        }
+    },
     VOID_RIFT(PointCategory.VOID, 3, new int[]{1, 2, 3}),
     GREEN_THUMB(PointCategory.CROP, 5, new int[]{1, 2, 3, 4, 5}),
     HARVEST_AURA(PointCategory.CROP, 3, new int[]{1, 2, 3}),
-    COMPOST_MASTER(PointCategory.CROP, 3, new int[]{1, 2, 3}),
+    COMPOST_MASTER(PointCategory.CROP, 3, new int[]{1, 2, 3}) {
+        @Override
+        public Map<PointCategory, Integer> tierCost(int t) {
+            int c = cost(t);
+            return Map.of(PointCategory.CROP, c, PointCategory.ORGANIC, c);
+        }
+    },
     SEED_SATCHEL(PointCategory.CROP, 1, new int[]{1}),
     FARMERS_FORTUNE(PointCategory.CROP, 3, new int[]{1, 2, 3}),
     HARVEST_WAVE(PointCategory.CROP, 3, new int[]{1, 2, 3}),
     CURIOUS_MINER(PointCategory.DISCOVERY, 1, new int[]{1}),
-    GEOLOGIST(PointCategory.DISCOVERY, 3, new int[]{1, 2, 3}),
+    GEOLOGIST(PointCategory.DISCOVERY, 3, new int[]{1, 2, 3}) {
+        @Override
+        public Map<PointCategory, Integer> tierCost(int t) {
+            int c = cost(t);
+            return Map.of(PointCategory.DISCOVERY, c, PointCategory.TERRA, c);
+        }
+    },
     SURVEYOR(PointCategory.DISCOVERY, 3, new int[]{1, 2, 3}),
     CARTOGRAPHER(PointCategory.DISCOVERY, 3, new int[]{1, 2, 3}),
     PATHFINDER(PointCategory.DISCOVERY, 3, new int[]{1, 2, 3}),
     WORLD_WALKER(PointCategory.DISCOVERY, 3, new int[]{1, 2, 3}),
-    ANGEL_WINGS(PointCategory.TERRA, 3, new int[]{1, 2, 3}, true, List.of(
-            Map.of(PointCategory.TERRA, 5000, PointCategory.MINERAL, 5000, PointCategory.VOID, 5000),
-            Map.of(PointCategory.TERRA, 10000, PointCategory.MINERAL, 10000, PointCategory.VOID, 10000),
-            Map.of(PointCategory.TERRA, 20000, PointCategory.MINERAL, 20000, PointCategory.VOID, 20000))),
-    TITAN_STRIKE(PointCategory.TERRA, 3, new int[]{1, 2, 3}, true, List.of(
-            Map.of(PointCategory.TERRA, 5000, PointCategory.ORGANIC, 5000, PointCategory.CROP, 5000),
-            Map.of(PointCategory.TERRA, 10000, PointCategory.ORGANIC, 10000, PointCategory.CROP, 10000),
-            Map.of(PointCategory.TERRA, 20000, PointCategory.ORGANIC, 20000, PointCategory.CROP, 20000)));
+    ANGEL_WINGS(PointCategory.TERRA, 3, new int[]{1, 2, 3}) {
+        @Override
+        public Map<PointCategory, Integer> tierCost(int t) {
+            int c = 100 * t * t;
+            return Map.of(PointCategory.TERRA, c, PointCategory.MINERAL, c, PointCategory.VOID, c);
+        }
+    },
+    TITAN_STRIKE(PointCategory.TERRA, 3, new int[]{1, 2, 3}) {
+        @Override
+        public Map<PointCategory, Integer> tierCost(int t) {
+            int c = 100 * t * t;
+            return Map.of(PointCategory.TERRA, c, PointCategory.ORGANIC, c, PointCategory.CROP, c);
+        }
+    };
 
     private final PointCategory category;
     private final int maxTier;
     private final int[] tierValues;
-    private final boolean mythic;
-    private final List<Map<PointCategory, Integer>> mythicCosts;
 
     SkillType(PointCategory category, int maxTier, int[] tierValues) {
-        this(category, maxTier, tierValues, false, Collections.emptyList());
-    }
-
-    SkillType(PointCategory category, int maxTier, int[] tierValues, boolean mythic, List<Map<PointCategory, Integer>> mythicCosts) {
         this.category = category;
         this.maxTier = maxTier;
         this.tierValues = tierValues;
-        this.mythic = mythic;
-        this.mythicCosts = mythicCosts;
     }
 
     public PointCategory category() { return category; }
     public int maxTier() { return maxTier; }
-    public boolean isMythic() { return mythic; }
 
     public int tierValue(int tier) {
         if (tier < 1 || tier > maxTier) return 0;
@@ -84,11 +123,14 @@ public enum SkillType {
     }
 
     public int cost(int targetTier) {
-        return 500 * targetTier * targetTier;
+        return 10 * targetTier * targetTier;
     }
 
-    public Map<PointCategory, Integer> mythicCost(int targetTier) {
-        if (!mythic || targetTier < 1 || targetTier > maxTier) return Collections.emptyMap();
-        return mythicCosts.get(targetTier - 1);
+    public Map<PointCategory, Integer> tierCost(int targetTier) {
+        return Map.of(category, cost(targetTier));
+    }
+
+    public boolean isMythic() {
+        return this == ANGEL_WINGS || this == TITAN_STRIKE;
     }
 }
